API-2168 - Create test user

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,7 +55,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-application.global=uk.gov.hmrc.apiplatformtestuser.MicroserviceGlobal
+application.global=uk.gov.hmrc.testuser.config.MicroserviceGlobal
 
 # Router
 # ~~~~~
@@ -86,7 +86,7 @@ controllers {
       needsAuditing = false
     }
 
-  uk.gov.hmrc.apiplatformtestuser.controllers.MicroserviceHelloWorld = {
+  uk.gov.hmrc.testuser.controllers.TestUserController = {
       needsAuth = false
       needsLogging = false
       needsAuditing = false
