API-2168 - Encrypt password

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,7 +86,7 @@ controllers {
       needsAuditing = false
     }
 
-  uk.gov.hmrc.testuser.controllers.TestUserController = {
+  uk.gov.hmrc.testuser.controllers.TestUserControllerImpl = {
       needsAuth = false
       needsLogging = false
       needsAuditing = false
@@ -142,6 +142,7 @@ mongodb {
     uri = "mongodb://localhost:27017/api-platform-test-user"
 }
 
+passwordLogRounds = 12
 
 microservice {
     metrics {
