API-2350 added service registration on startup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,7 @@
 # ~~~~~
 
 appName=api-platform-test-user
+appUrl="http://"${appName}".service"
 
 # Play Modules
 # ~~~~
@@ -161,5 +162,20 @@ microservice {
             port=8500
         }
 
+        service-locator {
+            host=localhost
+            port=9602
+        }
+    }
+}
+
+Prod {
+    microservice {
+        services {
+            service-locator {
+                host = ${appName}.service
+                port = 80
+            }
+        }
     }
 }
