API-2342 - use auth-login-api to create auth session

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,5 +161,9 @@ microservice {
             port=8500
         }
 
+        auth-login-api {
+            host=localhost
+            port=8585
+        }
     }
 }
