--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,7 +16,7 @@
 # ~~~~~
 
 appName=api-platform-test-user
-appUrl="http://"${appName}".service"
+appUrl="http://"${appName}".protected.mdtp"
 
 # Play Modules
 # ~~~~
@@ -178,17 +178,17 @@ Prod {
     microservice {
         services {
             service-locator {
-                host = service-locator.service
+                host = service-locator.protected.mdtp
                 port = 80
             }
             
             auth {
-                host=auth.service
+                host=auth.protected.mdtp
                 port=80
             }
 
             auth-login-api {
-                host=auth-login-api.service
+                host=auth-login-api.protected.mdtp
                 port=80
             }
         }
