APIS-2350: Add API definition/documentation routes & tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,12 +87,17 @@ controllers {
       needsAuditing = false
     }
 
-  uk.gov.hmrc.testuser.controllers.TestUserControllerImpl = {
+    uk.gov.hmrc.testuser.controllers.TestUserControllerImpl = {
       needsAuth = false
       needsLogging = false
       needsAuditing = false
     }
 
+    uk.gov.hmrc.testuser.controllers.DocumentationController = {
+      needsAuth = false
+      needsLogging = false
+      needsAuditing = false
+    }
 }
 
 
