--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,6 +87,12 @@ controllers {
       needsAuditing = false
     }
 
+    uk.gov.hmrc.testuser.controllers.AuthenticationControllerImpl = {
+      needsAuth = false
+      needsLogging = false
+      needsAuditing = false
+    }
+
     uk.gov.hmrc.testuser.controllers.TestUserControllerImpl = {
       needsAuth = false
       needsLogging = false
