OGD-311 implemented additional and randomly generated organisation details

--- a/resources/randomiser.conf
+++ b/resources/randomiser.conf
@@ -283,4 +283,16 @@ randomiser {
 
   }
 
+  organisationDetails {
+
+    name = [
+      "Acme",
+      "Disney",
+      "Globex",
+      "Stark Industries",
+      "Wonka Industries"
+    ]
+
+  }
+
 }
