OGD-352 - Add postcode in address

--- a/resources/randomiser.conf
+++ b/resources/randomiser.conf
@@ -285,6 +285,33 @@ randomiser {
       "Woking"
     ]
 
+    postcode = [
+      "TS1 1PA",
+      "TS2 1PA",
+      "TS3 1PA",
+      "TS4 1PA",
+      "TS5 1PA",
+      "TS6 1PA",
+      "TS7 1PA",
+      "TS8 1PA",
+      "TS9 1PA",
+      "TS10 1PA",
+      "TS11 1PA",
+      "TS12 1PA",
+      "TS13 1PA",
+      "TS14 1PA",
+      "TS15 1PA",
+      "TS16 1PA",
+      "TS17 1PA",
+      "TS18 1PA",
+      "TS19 1PA",
+      "TS20 1PA",
+      "TS21 1PA",
+      "TS22 1PA",
+      "TS23 1PA",
+      "TS24 1PA",
+      "TS25 1PA"
+    ]
   }
 
 }
