APIS-3122 Use guice DI to prevent repository initialisation problem

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2017 HM Revenue & Customs
+# Copyright 2018 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -87,13 +87,13 @@ controllers {
       needsAuditing = false
     }
 
-    uk.gov.hmrc.testuser.controllers.AuthenticationControllerImpl = {
+    uk.gov.hmrc.testuser.controllers.AuthenticationController = {
       needsAuth = false
       needsLogging = false
       needsAuditing = false
     }
 
-    uk.gov.hmrc.testuser.controllers.TestUserControllerImpl = {
+    uk.gov.hmrc.testuser.controllers.TestUserController = {
       needsAuth = false
       needsLogging = false
       needsAuditing = false
