APIS-3597 - Use HTTPS and update libraries

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,7 +16,7 @@
 # ~~~~~
 
 appName=api-platform-test-user
-appUrl="http://"${appName}".protected.mdtp"
+appUrl="https://"${appName}".protected.mdtp"
 
 # Play Modules
 # ~~~~
