[APSR-864][AO] Call agents-external-stubs after successful user creation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -186,5 +186,16 @@ microservice {
             host=localhost
             port=9668
         }
+
+        agents-external-stubs {
+            host=localhost
+            port=9009
+        }
     }
+}
+
+httpHeadersWhitelist = ["X-Client-ID"]
+
+feature {
+  syncToAgentsExternalStubs = false
 }
