APIS-4173 Brought in service locator registration, functionality of which had been lost.  This prompted introduction of configuration providers.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,9 +39,13 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 
 appName=api-platform-test-user
 
+appUrl = "https://"${appName}".protected.mdtp"
+
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
+play.modules.enabled += "uk.gov.hmrc.testuser.config.ServiceLocatorRegistrationModule"
+play.modules.enabled += "uk.gov.hmrc.testuser.config.ConfigurationModule"
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
