APIS-5321 - Removed hmrctest, upgraded sbt, fixed tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -125,16 +125,14 @@ metrics {
     rateUnit = SECONDS
     durationUnit = SECONDS
     showSamples = true
-    jvm = true
-    enabled = true
+    jvm = false
+    enabled = false
 }
 
-
 # Microservice specific config
-
 auditing {
-    enabled=true
-    traceRequests=true
+    enabled = false
+    traceRequests = true
     consumer {
         baseUri {
             host = localhost
