--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -189,6 +189,7 @@ paths:
                     pensionSchemeAdministratorIdentifier: A1234567
                     eoriNumber: GB123456789012
                     crn: '12345678'
+                    personPresentingTheGoods: 'GB123456789012'
                     taxPayerType: Individual
               example:
                 userId: '085603622877'
@@ -221,6 +222,7 @@ paths:
                 pensionSchemeAdministratorIdentifier: A1234567
                 eoriNumber: GB123456789012
                 crn: '12345678'
+                personPresentingTheGoods: 'GB123456789012'
                 taxPayerType: Individual
       security:
       - applicationRestricted: []
@@ -586,6 +588,9 @@ components:
         crn:
           type: string
           description: Company Reference Number
+        personPresentingTheGoods:
+          type: string
+          description: Local Reference Number
         taxPayerType:
           type: string
           description: Type of Self Assessment taxpayer One of 'Individual' or 'Partnership'
