--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,7 +44,7 @@ appUrl = "https://"${appName}".protected.mdtp"
 # ~~~~
 # Additional play modules can be added here
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
-play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "uk.gov.hmrc.testuser.MicroserviceModule"
 
 # Session Timeout
