--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,7 +28,7 @@ play.modules.enabled += "uk.gov.hmrc.play.audit.AuditModule"
 
 # Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
 # A metric filter must be provided
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+# play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 
 # Provides an implementation and configures all filters required by a Platform backend microservice.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
@@ -79,11 +79,11 @@ play.http.router=prod.Routes
 
 controllers {
 
-    com.kenshoo.play.metrics.MetricsController = {
-      needsAuth = false
-      needsLogging = false
-      needsAuditing = false
-    }
+    # com.kenshoo.play.metrics.MetricsController = {
+    #   needsAuth = false
+    #   needsLogging = false
+    #   needsAuditing = false
+    # }
 
     uk.gov.hmrc.testuser.controllers.AuthenticationController = {
       needsAuth = false
