--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,6 +29,7 @@ appUrl = "https://"${appName}".protected.mdtp"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "uk.gov.hmrc.testuser.MicroserviceModule"
+play.modules.enabled += "uk.gov.hmrc.testuser.config.ClockModule"
 
 # Session Timeout
 # ~~~~
