APIS-7081 - Modified update

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,6 +30,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "uk.gov.hmrc.testuser.MicroserviceModule"
 play.modules.enabled += "uk.gov.hmrc.testuser.config.ClockModule"
+play.modules.enabled += "uk.gov.hmrc.testuser.config.ConfigModule"
 
 # Session Timeout
 # ~~~~
@@ -85,13 +86,19 @@ mongodb {
     uri = "mongodb://localhost:27017/api-platform-test-user"
 }
 
+testUserRepository {
+  lastAccessPeriodToIgnore {
+    unit = "minute"
+    amount = 1
+  }
+}
+
 passwordLogRounds = 12
 # 250 is the default, you may need to change this according to your needs
 confidenceLevel = 250
 
 microservice {
     services {
-
         auth {
             host=localhost
             port=8500
