--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version="3.5.3"
+version="3.7.17"
 runner.dialect = "scala213"
 
 maxColumn = 180
@@ -31,7 +31,7 @@ newlines.implicitParamListModifierPrefer = before
 newlines.avoidForSimpleOverflow = [tooLong, punct, slc]
 
 rewrite.rules = [SortModifiers]
-rewrite.imports.sort = ascii
+rewrite.rules = [AsciiSortImports]
 
 verticalMultiline.atDefnSite = true
 verticalMultiline.newlineAfterOpenParen = true
