--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,7 +26,7 @@ appUrl = "https://"${appName}".protected.mdtp"
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "uk.gov.hmrc.testuser.MicroserviceModule"
 play.modules.enabled += "uk.gov.hmrc.testuser.config.ClockModule"
